# screenpipe-cleaner

./: Cargo.toml  README.md  config.toml.example
src/: cleanup.rs  config.rs  filter.rs  main.rs  storage.rs
